--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -5,15 +5,13 @@ header {
 }
 
 .header__container {
-	display: grid;
-	grid-template-columns: 1fr max-content 1fr;
+	@include layout-grid(1fr max-content 1fr);
 	justify-content: space-between;
 	padding: 2rem clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 2.8409)), 6rem);
 }
 
 nav {
-	display: flex;
-	gap: clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 1.4205)), 4rem);
+	@include layout-flex(row, clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 1.4205)), 4rem));
 	justify-content: center;
 	margin-top: 1.3rem;
 	font-size: $fontSize-XS;
@@ -29,15 +27,5 @@ nav {
 
 	&:hover {
 		color: $clr-primary;
-	}
-}
-
-@include tablet-l {
-	nav {
-		display: none;
-	}
-
-	.header__container {
-		grid-template-columns: max-content max-content;
 	}
 }
