--- a/scss/blocks/_vision.scss
+++ b/scss/blocks/_vision.scss
@@ -28,12 +28,12 @@
 		&::-webkit-scrollbar {
 		background-color: $clr-baseUltraDark;
 		width: .6rem;
-		border-radius: 10rem;
+		@extend %b-radiusXL;
 	}
 
 	&::-webkit-scrollbar-thumb {
 		background-color: $clr-baseNormal;
-		border-radius: 10rem;
+		@extend %b-radiusXL;
 	}
 }
 
@@ -43,7 +43,7 @@
 	align-items: stretch;
 
 	img {
-		border-radius: 2rem;
+		@extend %b-radiusM;
 		object-fit: cover;
 		width: 100%;
 	}
