--- a/css/privacy.css
+++ b/css/privacy.css
@@ -94,6 +94,14 @@ h2, h1 {
   text-align: center;
 }
 
+.container__footer, .header__container {
+  display: grid;
+}
+
+.networks, .copyright, nav {
+  display: flex;
+}
+
 body {
   background-color: #0D0D0D;
   color: white;
@@ -130,15 +138,17 @@ header {
 }
 
 .header__container {
-  display: grid;
   grid-template-columns: 1fr max-content 1fr;
+  gap: 0;
+  align-items: stretch;
   justify-content: space-between;
   padding: 2rem clamp(2rem, 2rem + (1vw - 0.32rem) * 2.8409, 6rem);
 }
 
 nav {
-  display: flex;
+  flex-direction: row;
   gap: clamp(2rem, 2rem + (1vw - 0.32rem) * 1.4205, 4rem);
+  align-items: stretch;
   justify-content: center;
   margin-top: 1.3rem;
   font-size: 1.8rem;
@@ -156,24 +166,17 @@ nav {
   color: #6015FF;
 }
 
-@media (max-width: 1150px) {
-  nav {
-    display: none;
-  }
-  .header__container {
-    grid-template-columns: max-content max-content;
-  }
-}
 .container__footer {
-  display: grid;
   grid-template-columns: 1fr auto 1fr;
+  gap: 0;
+  align-items: stretch;
   width: 100%;
 }
 
 .copyright {
-  display: flex;
-  align-items: center;
+  flex-direction: row;
   gap: 3rem;
+  align-items: center;
 }
 .copyright a {
   width: 8rem;
@@ -190,10 +193,10 @@ nav {
 }
 
 .networks {
-  display: flex;
+  flex-direction: row;
   gap: 1rem;
-  justify-self: end;
   align-items: center;
+  justify-self: end;
 }
 .networks a:last-of-type {
   margin-left: 4rem;
