--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -54,3 +54,20 @@
 %text-center {
 	text-align: center;
 }
+
+%b-radius {
+	&XL {
+		border-radius: $br-l;
+	}
+	&M {
+		border-radius: $br-s;
+	}
+}
+
+%d-grid {
+	display: grid;
+}
+
+%d-flex {
+	display: flex;
+}
