--- a/scss/blocks/_specialization.scss
+++ b/scss/blocks/_specialization.scss
@@ -20,12 +20,12 @@
 		&::-webkit-scrollbar {
 			background-color: $clr-baseUltraDark;
 			width: .6rem;
-			border-radius: 10rem;
+			@extend %b-radiusXL;
 		}
 	
 		&::-webkit-scrollbar-thumb {
 			background-color: $clr-baseNormal;
-			border-radius: 10rem;
+			@extend %b-radiusXL;
 		}
 	}
 
