--- a/css/main.css
+++ b/css/main.css
@@ -144,11 +144,11 @@ footer, .contacts, section {
   border-radius: 2rem;
 }
 
-.container__footer, .price__grid, .plus__card div, .header__container {
+.container__footer, .price__grid, .plus__card div, .vision__grid, .style__grid, .specialization__grid, .progress__bottom__item, .progress__bottom, .progress__grid .progress__images, .progress__grid, .header__container {
   display: grid;
 }
 
-.networks, .copyright, .price__item:nth-child(2) .price__var, .price__item:nth-child(2) div:first-of-type div, .price__item:nth-child(2), .price__item:first-of-type div:first-of-type, nav {
+.networks, .copyright, .price__item:nth-child(2) .price__var, .price__item:nth-child(2) div:first-of-type div, .price__item:nth-child(2), .price__item:first-of-type div:first-of-type, .style__col:last-of-type ul li, nav {
   display: flex;
 }
 
@@ -272,10 +272,10 @@ video {
 }
 
 .progress__grid {
-  width: 100%;
-  display: grid;
   grid-template-columns: 1fr max-content 1fr;
   gap: 8rem;
+  align-items: stretch;
+  width: 100%;
 }
 .progress__grid .progress__col {
   gap: 1.5rem;
@@ -299,9 +299,9 @@ video {
   font-weight: 400;
 }
 .progress__grid .progress__images {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
+  align-items: stretch;
 }
 .progress__grid .progress__images__inner {
   max-height: 22rem;
@@ -329,17 +329,17 @@ video {
 }
 
 .progress__bottom {
-  display: grid;
-  width: 100%;
   grid-template-columns: max-content max-content max-content;
+  gap: 0;
+  align-items: stretch;
+  width: 100%;
   margin-top: 8rem;
   justify-content: space-between;
 }
 .progress__bottom__item {
-  display: grid;
   grid-template-columns: max-content 1fr;
-  align-items: center;
   gap: 1rem;
+  align-items: center;
 }
 
 .about__grid {
@@ -386,9 +386,9 @@ video {
   line-height: 150%;
 }
 .specialization__grid {
-  display: grid;
   grid-template-columns: 1.5fr 1fr;
   gap: 5rem;
+  align-items: stretch;
   height: 40rem;
 }
 .specialization__col:first-of-type {
@@ -415,10 +415,10 @@ video {
 }
 
 .style__grid {
-  display: grid;
-  width: 100%;
   grid-template-columns: 1.5fr 1fr;
   gap: 5rem;
+  align-items: stretch;
+  width: 100%;
   height: 63rem;
 }
 
@@ -457,10 +457,11 @@ video {
   list-style-type: none;
 }
 .style__col:last-of-type ul li {
-  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: stretch;
   padding: 1rem 0;
   border-top: 0.1rem solid #a2a1a1;
-  gap: 1rem;
   font-size: 2rem;
   font-weight: 400;
 }
@@ -475,11 +476,11 @@ video {
 }
 
 .vision__grid {
-  margin-top: 4rem;
-  display: grid;
-  width: 100%;
   grid-template-columns: 1.5fr 1fr;
   gap: 5rem;
+  align-items: stretch;
+  width: 100%;
+  margin-top: 4rem;
   height: 50rem;
 }
 
@@ -627,7 +628,7 @@ video {
 .container__footer {
   grid-template-columns: 1fr auto 1fr;
   gap: 0;
-  align-items: stretch;
+  align-items: center;
   width: 100%;
 }
 
