--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'base';
 @import './components/buttons';
+@import './components/links';
 @import './blocks/header';
 @import './blocks/hero';
 @import './blocks/progress';
