--- a/css/privacy.css
+++ b/css/privacy.css
@@ -166,6 +166,14 @@ nav {
   color: #6015FF;
 }
 
+@media (max-width: 1150px) {
+  .header__container {
+    grid-template-columns: 1fr max-content;
+  }
+  nav {
+    display: none;
+  }
+}
 .container__footer {
   grid-template-columns: 1fr auto 1fr;
   gap: 0;
@@ -182,13 +190,6 @@ nav {
   width: 8rem;
 }
 .copyright span {
-  font-size: 1.8rem;
-}
-
-.politics {
-  text-decoration: underline;
-  text-underline-offset: 1rem;
-  color: #7542e4;
   font-size: 1.8rem;
 }
 
