--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -29,3 +29,13 @@ nav {
 		color: $clr-primary;
 	}
 }
+
+@include tablet-l {
+	.header__container {
+		grid-template-columns: 1fr max-content;
+	}
+
+	nav {
+		display: none;
+	}
+}
