--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -6,25 +6,27 @@
 	font-size: $fontSize-button;
 	font-weight: 400;
 	transition: background-color ease-in-out 300ms;
-}
 
-.btn--primary {
-	border: solid .2rem $clr-light;
-	padding: .8rem 1.3rem .9rem;
-	margin-left: auto;
+	&--primary {
+		border: solid .2rem $clr-light;
+		padding: .8rem 1.3rem .9rem;
+		margin-left: auto;
+	}
 
-	&:hover {
+	&--secondary {
+		padding: 1.6rem 2.4rem 1.7rem;
 		background-color: $clr-primary;
-		border-color: $clr-primary;
+		font-size: $fontSize-btnLarge;
 	}
 }
 
-.btn--secondary {
-	padding: 1.6rem 2.4rem 1.7rem;
-	background-color: $clr-primary;
-	font-size: 2.4rem;
-
-	&:hover {
+@media (hover: hover) {
+	.btn--secondary:hover {
 		background-color: $clr-secondary;
+	}
+
+	.btn--primary:hover {
+		background-color: $clr-primary;
+		border-color: $clr-primary;
 	}
 }
