--- a/css/privacy.css
+++ b/css/privacy.css
@@ -102,6 +102,16 @@ h2, h1 {
   display: flex;
 }
 
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    font-size: 0;
+  }
+  100% {
+    opacity: 1;
+    font-size: 1;
+  }
+}
 body {
   background-color: #0D0D0D;
   color: white;
