--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -71,3 +71,9 @@
 %d-flex {
 	display: flex;
 }
+
+%animation-appearance {
+	animation-name: appearance;
+	animation-duration: 3s;
+	animation-timing-function: ease-in-out;
+}
