--- a/css/privacy.css
+++ b/css/privacy.css
@@ -102,14 +102,18 @@ h2, h1 {
   display: flex;
 }
 
-@keyframes fade-in {
+header {
+  animation-name: appearance;
+  animation-duration: 3s;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes appearance {
   0% {
     opacity: 0;
-    font-size: 0;
   }
   100% {
     opacity: 1;
-    font-size: 1;
   }
 }
 body {
