--- a/scss/base/_animation.scss
+++ b/scss/base/_animation.scss
@@ -1,11 +1,9 @@
-@keyframes fade-in {
-	0% {
+@keyframes appearance{
+  0% {
 		opacity: 0;
-		font-size: 0;
-	}
-	
-	100% {
+  }
+
+  100% {
 		opacity: 1;
-		font-size: 1;
-	}
+  }
 }
