--- a/scss/base/_breakpoints.scss
+++ b/scss/base/_breakpoints.scss
@@ -10,6 +10,12 @@
 	}
 }
 
+@mixin xl() {
+	@media (max-width: $breakpoint-1190) {
+		@content;
+	}
+}
+
 @mixin tablet-l() {
 	@media (max-width: $breakpoint-xl) {
 		@content;
@@ -18,6 +24,12 @@
 
 @mixin tablet-s() {
 	@media (max-width: $breakpoint-l) {
+		@content;
+	}
+}
+
+@mixin s() {
+	@media (max-width: $breakpoint-880) {
 		@content;
 	}
 }
