--- a/css/main.css
+++ b/css/main.css
@@ -385,10 +385,10 @@ video {
 
 .progress__bottom {
   grid-template-columns: max-content max-content max-content;
-  gap: 0;
+  gap: 1rem;
   align-items: stretch;
   width: 100%;
-  margin-top: 8rem;
+  margin-top: clamp(4rem, 4rem + (1vw - 0.32rem) * 2.8409, 8rem);
   justify-content: space-between;
 }
 .progress__bottom__item {
@@ -433,9 +433,83 @@ video {
     display: none;
   }
 }
-@media (max-width: 880px) {
+@media (max-width: 885px) {
   .progress__images__inner {
-    height: 5rem;
+    height: 15rem;
+  }
+  .progress .large-img {
+    height: 40rem;
+  }
+  .progress__grid {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+  .progress__grid .timeline__wrap {
+    display: none;
+  }
+  .progress .progress__col--first {
+    align-items: center;
+  }
+  .progress .progress__col--second {
+    align-items: center;
+  }
+  .progress .col-1 {
+    order: 0;
+  }
+  .progress .col-2 {
+    order: 1;
+    margin-bottom: 3rem;
+  }
+  .progress .col-3 {
+    order: 4;
+    margin-bottom: 3rem;
+  }
+  .progress .col-4 {
+    order: 3;
+  }
+  .progress .col-5 {
+    order: 5;
+  }
+  .progress .col-6 {
+    order: 6;
+  }
+  .progress .desc {
+    text-align: center;
+  }
+  .progress__bottom p {
+    font-size: clamp(1.4rem, 1.4rem + (1vw - 0.32rem) * 0.3571, 1.6rem);
+  }
+}
+@media (max-width: 600px) {
+  .progress .year {
+    font-size: clamp(3.2rem, 3.2rem + (1vw - 0.32rem) * 5.7143, 4.8rem);
+    margin-top: -2rem;
+  }
+  .progress__images__inner {
+    height: 10rem;
+  }
+  .progress .large-img {
+    height: 30rem;
+  }
+}
+@media (max-width: 460px) {
+  .progress__images__inner {
+    height: 8rem;
+  }
+  .progress .large-img {
+    height: 25rem;
+  }
+  .progress__bottom {
+    grid-template-columns: 1fr;
+    gap: 4rem;
+  }
+  .progress__bottom img {
+    width: 7rem;
+  }
+}
+@media (max-width: 375px) {
+  .progress__images__inner {
+    height: 6rem;
   }
   .progress .large-img {
     height: 20rem;
