--- a/css/main.css
+++ b/css/main.css
@@ -652,6 +652,8 @@ video {
 }
 .style__photo-wrap img {
   width: 100%;
+  height: 20rem;
+  object-fit: cover;
 }
 
 .style__col:last-of-type b {
@@ -715,11 +717,14 @@ video {
 .vision__col:last-of-type img {
   object-fit: cover;
   width: 100%;
+  height: 100%;
 }
-.vision__col:last-of-type img:last-of-type {
-  grid-column: 1/3;
-  max-height: 30rem;
+.vision__col:last-of-type picture:last-of-type {
   width: 100%;
+  grid-column: 1/3;
+}
+.vision__col:last-of-type picture:last-of-type img {
+  max-height: 30rem;
   object-position: top;
 }
 
