--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,6 @@ html {
 
 body {
   min-height: 100vh;
-  min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
 }
@@ -82,13 +81,16 @@ textarea {
   font-family: inherit;
 }
 
+.container__footer, .price__grid, .plus__grid, .vision__col:last-of-type picture:last-of-type, .vision__col:first-of-type, .vision__grid, .style__photo-wrap img, .style__col:first-of-type, .style__grid, .about__grid img, .progress__bottom, .progress__grid .large-img, .progress__grid, header, .vision__col:last-of-type img, .progress__grid .progress__images__inner img, .progress__grid .progress__images, .hero__content, video {
+  width: 100%;
+}
+
 .hero {
   height: 100vh;
   min-height: 60rem;
 }
 
-.progress__grid .progress__images__inner img, .progress__grid .progress__images, .hero__content, video {
-  width: 100%;
+.vision__col:last-of-type img, .progress__grid .progress__images__inner img, .progress__grid .progress__images, .hero__content, video {
   height: 100%;
 }
 
@@ -243,7 +245,6 @@ ul {
   }
 }
 header {
-  width: 100%;
   position: absolute;
   z-index: 30;
 }
@@ -332,7 +333,6 @@ video {
   grid-template-columns: 1fr max-content 1fr;
   gap: 8rem;
   align-items: stretch;
-  width: 100%;
 }
 .progress__grid .progress__col {
   gap: 1.5rem;
@@ -384,7 +384,6 @@ video {
   z-index: -1;
 }
 .progress__grid .large-img {
-  width: 100%;
   height: 35rem;
   object-fit: cover;
   object-position: center;
@@ -394,7 +393,6 @@ video {
   grid-template-columns: max-content max-content max-content;
   gap: 1rem;
   align-items: stretch;
-  width: 100%;
   margin-top: clamp(4rem, 4rem + (1vw - 0.32rem) * 2.8409, 8rem);
   justify-content: space-between;
 }
@@ -524,11 +522,10 @@ video {
 }
 .about__grid {
   gap: clamp(2rem, 2rem + (1vw - 0.32rem) * 2.1307, 5rem);
-  align-items: stretch;
-  grid-template-rows: 1fr;
 }
 .about__grid img {
   min-height: 100%;
+  max-height: 60rem;
   object-fit: cover;
   object-position: center top;
 }
@@ -553,10 +550,6 @@ video {
   .about__grid {
     grid-template-columns: 1fr;
   }
-  .about__grid img {
-    height: 60rem;
-    width: 100%;
-  }
   .about__text__item b, .about__text__item p {
     text-align: center;
   }
@@ -564,7 +557,7 @@ video {
 @media (max-width: 460px) {
   .about__grid img {
     margin-top: -2rem;
-    height: 30rem;
+    height: 40rem;
   }
 }
 .mission b {
@@ -623,12 +616,10 @@ video {
   grid-template-columns: 1.5fr 1fr;
   gap: 5rem;
   align-items: stretch;
-  width: 100%;
   height: 63rem;
 }
 
 .style__col:first-of-type {
-  width: 100%;
   overflow: auto;
   padding-right: 2rem;
 }
@@ -651,7 +642,6 @@ video {
   margin-bottom: 4rem;
 }
 .style__photo-wrap img {
-  width: 100%;
   height: 20rem;
   object-fit: cover;
 }
@@ -686,13 +676,11 @@ video {
   grid-template-columns: 1.5fr 1fr;
   gap: 5rem;
   align-items: stretch;
-  width: 100%;
   margin-top: 4rem;
   height: 50rem;
 }
 
 .vision__col:first-of-type {
-  width: 100%;
   overflow: auto;
   padding-right: 2rem;
 }
@@ -716,11 +704,8 @@ video {
 }
 .vision__col:last-of-type img {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
 }
 .vision__col:last-of-type picture:last-of-type {
-  width: 100%;
   grid-column: 1/3;
 }
 .vision__col:last-of-type picture:last-of-type img {
@@ -729,7 +714,6 @@ video {
 }
 
 .plus__grid {
-  width: 100%;
   grid-template-rows: 1fr 1fr;
   gap: 1rem;
 }
@@ -759,7 +743,6 @@ video {
   grid-template-columns: max-content 1fr;
   gap: 2rem;
   align-items: start;
-  width: 100%;
 }
 .price__item:first-of-type {
   align-items: center;
@@ -832,7 +815,6 @@ video {
   grid-template-columns: 1fr auto 1fr;
   gap: 0;
   align-items: center;
-  width: 100%;
 }
 
 .copyright {
