--- a/css/privacy.css
+++ b/css/privacy.css
@@ -58,7 +58,6 @@ html {
 
 body {
   min-height: 100vh;
-  min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
 }
@@ -80,6 +79,10 @@ img, picture, video, canvas, svg, span {
 
 textarea {
   font-family: inherit;
+}
+
+.container__footer, header {
+  width: 100%;
 }
 
 .container {
@@ -150,7 +153,6 @@ ul {
 }
 
 header {
-  width: 100%;
   position: absolute;
   z-index: 30;
 }
@@ -196,7 +198,6 @@ nav ul {
   grid-template-columns: 1fr auto 1fr;
   gap: 0;
   align-items: center;
-  width: 100%;
 }
 
 .copyright {
