--- a/scss/base/_extends.scss
+++ b/scss/base/_extends.scss
@@ -1,10 +1,14 @@
+%width-100 {
+	width: 100%;
+}
+
 %full-screen {
 	height: 100vh;
 	min-height: 60rem;
 }
 
 %hundred-percent {
-	width: 100%;
+	@extend %width-100;
   height: 100%;
 }
 
