--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -1,11 +1,11 @@
 .about__grid {
 	@extend %grid-2col;
 	gap: clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 2.1307)), 5rem);
-	align-items: stretch;
-	grid-template-rows: 1fr;
 
 	img {
+		@extend %width-100;
 		min-height: 100%;
+		max-height: 60rem;
 		@extend %b-radiusM;
 		object-fit: cover;
 		object-position: center top;
@@ -37,8 +37,7 @@
 		grid-template-columns: 1fr;
 
 		img {
-			height: 60rem;
-			width: 100%;
+			@extend %width-100;
 		}
 	}
 
@@ -52,6 +51,6 @@
 @include xxxs {
 	.about__grid img {
 		margin-top: -2rem;
-		height: 30rem;
+		height: 40rem;
 	}
 }
