--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -4,7 +4,7 @@ footer {
 
 .container__footer {
 	@include layout-grid(1fr auto 1fr, 0, center);
-	width: 100%;
+	@extend %width-100;
 }
 
 .copyright {
