--- a/scss/blocks/_progress.scss
+++ b/scss/blocks/_progress.scss
@@ -3,7 +3,7 @@
 
 	&__grid {
 		@include layout-grid(1fr max-content 1fr, 8rem);
-		width: 100%;
+		@extend %width-100;
 	
 		.progress__col {
 			@extend %flex-standart;
@@ -73,7 +73,7 @@
 	
 		.large-img {
 			@extend %b-radiusM;
-			width: 100%;
+			@extend %width-100;
 			height: 35rem;
 			object-fit: cover;
 			object-position: center;
@@ -83,7 +83,7 @@
 
 .progress__bottom {
 	@include layout-grid(max-content max-content max-content, 1rem);
-	width: 100%;
+	@extend %width-100;
 	margin-top: clamp(4rem, calc(4rem + ((1vw - 0.32rem) * 2.8409)), 8rem);
 	justify-content: space-between;
 
