--- a/scss/blocks/_style.scss
+++ b/scss/blocks/_style.scss
@@ -1,11 +1,11 @@
 .style__grid {
 	@include layout-grid(1.5fr 1fr, 5rem);
-	width: 100%;
+	@extend %width-100;
 	height: 63rem;
 }
 
 .style__col:first-of-type {
-	width: 100%;
+	@extend %width-100;
 	overflow: auto;
 	padding-right: 2rem;
 
@@ -34,7 +34,7 @@
 	margin-bottom: 4rem;
 
 	img {
-		width: 100%;
+		@extend %width-100;
 		@extend %b-radiusM;
 		height: 20rem;
 		object-fit: cover;
